@@ -1,0 +1,39 @@
+<?php
+/** Nepal Bhasa (नेपाल भाषा)
+  *
+  * @addtogroup Language
+  */
+
+$namespaceNames = array(
+	NS_MEDIA            => 'माध्यम',
+	NS_SPECIAL          => 'विशेष',
+	NS_MAIN             => '',
+	NS_TALK             => 'खँलाबँला',
+	NS_USER             => 'छ्येलेमि',
+	NS_USER_TALK        => 'छ्येलेमि_खँलाबँला',
+	# NS_PROJECT set by $wgMetaNamespace
+	NS_PROJECT_TALK     => '$1_खँलाबँला',
+	NS_IMAGE            => 'किपा',
+	NS_IMAGE_TALK       => 'किपा_खँलाबँला',
+	NS_MEDIAWIKI        => 'मिडियाविकि',
+	NS_MEDIAWIKI_TALK   => 'मिडियाविकि_खँलाबँला',
+	NS_HELP             => 'ग्वाहालि',
+	NS_HELP_TALK        => 'ग्वाहालि_खँलाबँला',
+	NS_CATEGORY         => 'पुचः',
+	NS_CATEGORY_TALK    => 'पुचः_खँलाबँला'
+);
+
+$digitTransformTable = array(
+	'0' => '०',
+	'1' => '१',
+	'2' => '२',
+	'3' => '३',
+	'4' => '४',
+	'5' => '५',
+	'6' => '६',
+	'7' => '७',
+	'8' => '८',
+	'9' => '९',
+);
+
+?>
